<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista2Activity">

    <EditText
        android:id="@+id/et_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/b_Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Volver"
        app:layout_constraintBottom_toBottomOf="@+id/et_Nombre"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/b_Anadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Anadir"
        app:layout_constraintBottom_toBottomOf="@+id/et_Nombre" />
</androidx.constraintlayout.widget.ConstraintLayout>