<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="usuario"
    type="com.maraloedev.entrenamientosergio.Usuario" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView_Nombre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <EditText
            android:id="@+id/et_NombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Hint_IntroduceUsuario"
            android:text="@{usuario.nombre}"
            android:inputType="text"
            android:textColorHint="#050505"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.31"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998" />

        <ListView
            android:id="@+id/lv_Datos"
            android:layout_width="407dp"
            android:layout_height="484dp"
            app:layout_constraintTop_toBottomOf="@+id/et_NombreUsuario" >

        </ListView>

        <Button
            android:id="@+id/b_Listar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/Button_ListaUsuarios"
            app:layout_constraintBottom_toTopOf="@+id/tv_Nombre"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b_IrAlSegundoActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_IrAl2doActivity"
            app:layout_constraintBottom_toBottomOf="@+id/b_Listar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_Nombre" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>